--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.application.name=passwordmanager
 #data source url
 spring.datasource.url=jdbc:mysql://ballast.proxy.rlwy.net:15280/railway
 spring.datasource.username=root
-spring.datasource.password=DXtHYLWsJpKCTtOZolSnbDRWDuUPXIpd
+spring.datasource.password=${MYSQLPASSWORD}
 
 #jpa configuration
 spring.jpa.show-sql=true
