commit time zone

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+
+#railway datbase configuration
 spring.application.name=passwordmanager
 
 #Mysql database configuration
@@ -25,4 +27,12 @@ spring.jpa.show-sql=true
 #for creating schema & table in db
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
+#---------------------------------------------
+#--------------------------------------------
+
+
+spring.jackson.time-zone=Asia/Kolkata
+spring.jackson.serialization.write-dates-as-timestamps=false
 
