--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,36 +1,17 @@
-#spring.application.name=passwordmanager
-#
-##Mysql database configuration
-##data source url
-#spring.datasource.url=jdbc:mysql://localhost:3306/password_manager
-#spring.datasource.username=root
-#spring.datasource.password=123456
-#
-##jpa configuration
-#spring.jpa.show-sql=true
-##for creating schema & table in db
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+#aiven datbase configuration
 
-#railway datbase configuration
 spring.application.name=passwordmanager
 
-#Mysql database configuration
-#data source url
-spring.datasource.url=jdbc:mysql://ballast.proxy.rlwy.net:15280/railway
-spring.datasource.username=root
+# MySQL database configuration (Aiven)
+spring.datasource.url=jdbc:mysql://mysql-dca4c82-tauqeersiwan-cb4a.b.aivencloud.com:28883/defaultdb
+spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
-#jpa configuration
+# JPA configuration
 spring.jpa.show-sql=true
-#for creating schema & table in db
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-
-#---------------------------------------------
-#--------------------------------------------
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
 spring.jackson.time-zone=Asia/Kolkata
